--- a/app/src/main/res/layout/activity_mantenimiento_clientes.xml
+++ b/app/src/main/res/layout/activity_mantenimiento_clientes.xml
@@ -2,61 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clientes_mnt_contenido_principal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mantenimiento_clientes">
+    tools:context=".mantenimiento_clientes" >
 
     <LinearLayout
+        android:id="@+id/clientes_mtn_barra_busqueda"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/fondo"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/purple_200"
+        android:gravity="top"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        >
+
+        <EditText
+            android:id="@+id/cli_mtn_barra_busqueda_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Identificacion"
+            android:inputType="textPersonName" />
+
+        <ImageButton
+            android:id="@+id/cli_mtn_barra_busqueda_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_search" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/cli_mnt_formulario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:visibility="gone"></LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/purple_500"
-            android:orientation="horizontal"
-            android:padding="20dp">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Te Presto Online"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:textStyle="bold|italic" />
-        </LinearLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="50dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/white"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="100dp"></LinearLayout>
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="20dp"
+            />
+    </ScrollView>
 </LinearLayout>
