--- a/app/src/main/res/layout/activity_mantenimiento_clientes.xml
+++ b/app/src/main/res/layout/activity_mantenimiento_clientes.xml
@@ -37,6 +37,14 @@
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_menu_search" />
 
+        <ImageButton
+            android:id="@+id/cli_mtn_barra_limpiar_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/ic_menu_revert" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -60,12 +68,11 @@
             android:id="@+id/clientes_mnt_lista"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@color/fondo"
             android:orientation="vertical"
-            android:padding="10dp"
+            android:layout_marginTop="20dp"
 
             />
     </ScrollView>
