--- a/app/src/main/res/layout/prestamo_alta.xml
+++ b/app/src/main/res/layout/prestamo_alta.xml
@@ -184,6 +184,31 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <EditText
+                    android:id="@+id/prestamo_alta_cantidad_cuotas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:enabled="false"
+                    android:hint="Cantidad de cuotas"
+                    android:inputType="number" />
+
+                <EditText
+                    android:id="@+id/prestamo_alta_cuota"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Cuota"
+                    android:inputType="number" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
                 <RadioButton
                     android:id="@+id/radioButton"
                     android:layout_width="wrap_content"
